[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Textures/button_normal.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/wood.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/border1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/EvilEmpire-4BBVK.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/AccountCreatedMessageScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/CreateAccountScreen.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
extra_spacing_char = 4
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 2
outline_color = Color( 0.196078, 0.188235, 0.188235, 1 )
extra_spacing_char = 3
font_data = ExtResource( 5 )

[node name="CreateAccountScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -209.0
margin_right = 201.0
margin_bottom = 204.0
rect_min_size = Vector2( 400, 300 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -176.0
margin_right = 150.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="Background/VBoxContainer"]
margin_right = 300.0
margin_bottom = 7.0
rect_min_size = Vector2( 0, 7 )

[node name="UsernameTitle2" type="Label" parent="Background/VBoxContainer"]
margin_top = 11.0
margin_right = 300.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Email"

[node name="Email" type="LineEdit" parent="Background/VBoxContainer"]
margin_top = 37.0
margin_right = 300.0
margin_bottom = 61.0
text = "user@example.com"

[node name="MarginContainer6" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 65.0
margin_right = 300.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 5 )

[node name="UsernameTitle" type="Label" parent="Background/VBoxContainer"]
margin_top = 74.0
margin_right = 300.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "Username"

[node name="Username" type="LineEdit" parent="Background/VBoxContainer"]
margin_top = 100.0
margin_right = 300.0
margin_bottom = 124.0
text = "Username"

[node name="MarginContainer2" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 128.0
margin_right = 300.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 5 )

[node name="PasswordTitle" type="Label" parent="Background/VBoxContainer"]
margin_top = 137.0
margin_right = 300.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="Background/VBoxContainer"]
margin_top = 163.0
margin_right = 300.0
margin_bottom = 187.0
text = "password"

[node name="MarginContainer5" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 191.0
margin_right = 300.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 5 )

[node name="RepeatPasswordTitle" type="Label" parent="Background/VBoxContainer"]
margin_top = 200.0
margin_right = 300.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 1 )
text = "Repeat Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepeatPassword" type="LineEdit" parent="Background/VBoxContainer"]
margin_top = 226.0
margin_right = 300.0
margin_bottom = 250.0
text = "password"

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 254.0
margin_right = 300.0
margin_bottom = 269.0
rect_min_size = Vector2( 0, 15 )

[node name="CreateAccountButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_left = 40.0
margin_top = 273.0
margin_right = 260.0
margin_bottom = 308.0
rect_min_size = Vector2( 220, 35 )
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="CreateAccount" type="Label" parent="Background/VBoxContainer/CreateAccountButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -13.5
margin_right = 92.0
margin_bottom = 13.5
custom_fonts/font = SubResource( 2 )
text = "Create Account"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer3" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 312.0
margin_right = 300.0
margin_bottom = 317.0
rect_min_size = Vector2( 0, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_left = 40.0
margin_top = 321.0
margin_right = 260.0
margin_bottom = 356.0
rect_min_size = Vector2( 220, 35 )
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Back" type="Label" parent="Background/VBoxContainer/BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -13.5
margin_right = 34.0
margin_bottom = 13.5
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="Sprite" parent="."]
position = Vector2( 640.846, 354.342 )
scale = Vector2( 0.248, 0.232 )
texture = ExtResource( 4 )

[node name="AccountCreatedMessageScreen" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="Background/VBoxContainer/CreateAccountButton" to="." method="_on_CreateAccountButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/BackButton" to="." method="_on_Back_Button_pressed"]
